# simplex

./: .gitignore  README.md  rank.sage  simplex.py  test_simplex
.github/workflows/: linuxbuildwheels  macosbuildwheel  wheels.yml
reference/: simplex.py  test_simplex
simplex/: CMakeLists.txt  pyproject.toml  pysimplex.md  setup.py
simplex/pysimplex/: CMakeLists.txt  __init__.py  pysimplex.cpp
simplex/src/: A_matrix.cpp  A_matrix.hpp  CMakeLists.txt  Q_matrix.cpp  Q_matrix.hpp  bimap.hpp  parse-stim.cpp  simplex.cpp
simplex/src/include/: parse-stim.hpp  simplex.hpp
simplex/test/: CMakeLists.txt  gen-test-cases  process-file.cpp  simplex-test.cpp
test-circuits/: c0.stim  random_circuit_64.stim
